tests/en/errors/repeat_not_number.salam
// EXPECT: E063
func main:
    repeat "five":
        println "x"
    end
end
